# LFUcache

./: .gitignore  CMakeLists.txt  README.md  comparator.cpp  comporator.cpp
common/: common.cpp  common.h
costom_type/: costom.h
ideal_cache/: CMakeLists.txt
ideal_cache/includes/: ideal_cache.h
ideal_cache/sources/: ideal_cache.cpp  main.cpp
ideal_cache/test/: ideal_cache_unit_test.cpp
includes/: cache.h  lfu_unit_test.h
lfu_cache/: CMakeLists.txt
lfu_cache/includes/: lfu_cache.h
lfu_cache/sources/: lfu_cache.cpp  main.cpp
lfu_cache/test/: lfu_unit_test.cpp
sources/: main.cpp
sourses/: main.cpp
test/: lfu_unit_test.cpp  testedFunc.cpp
